--- a/app/src/main/res/layout/order_item_botton_sheet.xml
+++ b/app/src/main/res/layout/order_item_botton_sheet.xml
@@ -81,6 +81,7 @@
 
         <ImageView
             android:id="@+id/ivMinus"
+            android:clickable="false"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
