--- a/app/src/main/res/layout/collapsing_toolbar.xml
+++ b/app/src/main/res/layout/collapsing_toolbar.xml
@@ -30,6 +30,7 @@
             android:scaleType="centerCrop"
             android:src="@drawable/welcome"
             app:layout_collapseMode="parallax"
+            android:contentDescription="@string/todo"
             app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed" />
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 </com.google.android.material.appbar.AppBarLayout>
