--- a/app/src/main/res/layout/fragment_customer_dashboard.xml
+++ b/app/src/main/res/layout/fragment_customer_dashboard.xml
@@ -33,6 +33,7 @@
         android:layout_margin="20dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
+        android:contentDescription="@string/todo"
         android:src="@drawable/ic_add" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
