--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -10,8 +10,9 @@
         android:id="@+id/ivCategory"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/todo"
         tools:src="@drawable/personalcr" />
 
     <TextView
@@ -19,16 +20,18 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/general_margin"
-        android:layout_toRightOf="@id/ivCategory"
+        android:layout_marginStart="@dimen/general_margin"
+        android:layout_toEndOf="@id/ivCategory"
         android:textColor="@color/incharge_dark_grey"
         android:textSize="18sp"
+        tools:ignore="RelativeOverlap"
         tools:text="United Kingdom" />
 
     <ImageView
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/todo"
         android:src="@drawable/arrow_down" />
 </RelativeLayout>
