--- a/app/src/main/res/layout/order_item_grid.xml
+++ b/app/src/main/res/layout/order_item_grid.xml
@@ -24,7 +24,7 @@
             android:drawableEnd="@drawable/new_date"
             android:drawablePadding="5dp"
             android:padding="1dp"
-            android:text="date"
+            android:text="@string/date"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textColor="#221D1D"
@@ -44,6 +44,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
             app:layout_constraintTop_toBottomOf="@id/mtvProductOrderDate"
+            android:contentDescription="@string/todo"
             tools:srcCompat="@tools:sample/avatars" />
 
 
