--- a/app/src/main/res/layout/order_item_list.xml
+++ b/app/src/main/res/layout/order_item_list.xml
@@ -25,7 +25,7 @@
             android:drawableEnd="@drawable/new_date"
             android:drawablePadding="5dp"
             android:padding="5dp"
-            android:text="date"
+            android:text="@string/date"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
             android:textColor="#221D1D"
@@ -44,6 +44,7 @@
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
             app:layout_constraintTop_toTopOf="@id/constraint_customer_item1"
+            android:contentDescription="@string/todo"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
