--- a/app/src/main/res/layout/product_item_details.xml
+++ b/app/src/main/res/layout/product_item_details.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:drawableEnd="@drawable/new_date"
             android:padding="5dp"
-            android:text="date"
+            android:text="@string/date"
             android:drawablePadding="5dp"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
@@ -45,6 +45,7 @@
             android:scaleType="fitXY"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
             app:layout_constraintTop_toTopOf="@id/constraint_customer_item1"
+            android:contentDescription="@string/todo"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
