--- a/app/src/main/res/layout/product_item_grid.xml
+++ b/app/src/main/res/layout/product_item_grid.xml
@@ -24,7 +24,7 @@
             android:drawableEnd="@drawable/new_date"
             android:drawablePadding="5dp"
             android:padding="1dp"
-            android:text="date"
+            android:text="@string/date"
             android:visibility="invisible"
             android:textAlignment="textEnd"
             android:textAllCaps="true"
@@ -45,6 +45,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/constraint_customer_item1"
             app:layout_constraintTop_toBottomOf="@id/mtvProductOrderDate"
+            android:contentDescription="@string/todo"
             tools:srcCompat="@tools:sample/avatars" />
 
         <com.google.android.material.textview.MaterialTextView
